# dace

./: CMakeLists.txt  Doxyfile
.github/workflow/: doxygen-static.yml
.github/workflows/: doxygen-static.yml
core/: CMakeLists.txt  daceaux.c  dacebasic.c  daceerror.c  daceeval.c  daceinit.c  daceio.c  dacemath.c  dacememory.c  dacenorm.c
core/contrib/: CMakeLists.txt  dgamma.c  libf2c.c  psi.c  ribesl.c  rjbesl.c  rkbesl.c  rybesl.c  zeta.c
core/contrib/include/: dacecontrib.h  f2c.h
core/include/dace/: config.h.in  daceaux.h  dacebase.h  dacecore.h  dacecore_s.h  daceerror.h
docs/: Absolute.dox  Comparisons.dox  DA.dox  Evaluation.dox  Getting started.dox  Interfaces.dox  Manual.dox  Usage.dox  main.dox  topics.dox
interfaces/cxx/: AlgebraicMatrix.cpp  AlgebraicVector.cpp  CMakeLists.txt  DA.cpp  DACEException.cpp  DAFormatter.cpp  MathExtension.cpp  Monomial.cpp  compiledDA.cpp
interfaces/cxx/include/dace/: AlgebraicMatrix.h  AlgebraicMatrix_t.h  AlgebraicVector.h  AlgebraicVector_t.h  DA.h  DACEException.h  DAFormatter.h  DA_t.h  Interval.h  MathExtension.h  Monomial.h  PromotionTrait.h  compat_boost_odeint.h  compiledDA.h  compiledDA_t.h  dace.h  dace_s.h
